cert-manager/snowdrop-dev/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: snowdrop-dev-site
  name: snowdrop-dev-site
spec:
  ports:
    - name: "8080"
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    service: snowdrop-site-angular
  sessionAffinity: None
  type: ClusterIP
