cert-manager/snowdrop-dev/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: snowdrop-site-angular
  name: snowdrop-dev
spec:
  host: snowdrop.dev
  port:
    targetPort: '8080'
  tls:
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEkjCCA3qgAwIBAgIQCgFBQgAAAVOFc2oLheynCDANBgkqhkiG9w0BAQsFADA/
[...]
      KOqkqm57TH2H3eDJAkSnh6/DNFu0Qg==
      -----END CERTIFICATE-----
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFUTCCBDmgAwIBAgISA9y566WUAHQN35W2k8fatehKMA0GCSqGSIb3DQEBCwUA
[...]
      TF45melMLeo4kFSo7fmF4cGexPpN
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Allow
    key: |-
      -----BEGIN RSA PRIVATE KEY-----
      MIIEowIBAAKCAQEAsmFdNoyblYzAGkqeW4sn+667MwumCm9gB0dGcCQMHApsccNH
[...]
      TdCzh5UXVLY0n20Iu6r3GqXwcIm5zZGTWuK3gKAWB+VgVO69cpS/
      -----END RSA PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: snowdrop-dev-site
    weight: 100
  wildcardPolicy: None
